When driven IK influence change, ik animation have 1 frame delay #52835

Closed
opened 2017-09-19 18:05:59 +02:00 by Hazuki Aoi · 18 comments

System Information
Win10
GTX-1050Ti

Blender Version
Broken: 2.79 5bd8ac9
Worked: (optional)

Short description of error
When IK influence change, ik animation have 1 frame delay
And this delay will be exported

Exact steps for others to reproduce the error
1.The IK Bone influence is driver from another bone
and on the first NLA or frame influence is 0.
image.png
2.Hold Alt and scrolling mouse wheel move to next frame.Or press Right Arrow Key move to next frame.The IK target moved and IK Bone have not change.
first frame:
image.png
next frame:
image.png

3.Export FBX with NLA
image.png
image.png

4.Import Unity
image.png
image.png

5.Error blender file and fbx
error.7z

**System Information** Win10 GTX-1050Ti **Blender Version** Broken: 2.79 5bd8ac9 Worked: (optional) **Short description of error** When IK influence change, ik animation have 1 frame delay And this delay will be exported **Exact steps for others to reproduce the error** 1.The IK Bone influence is driver from another bone and on the first NLA or frame influence is 0. ![image.png](https://archive.blender.org/developer/F825380/image.png) 2.Hold Alt and scrolling mouse wheel move to next frame.Or press Right Arrow Key move to next frame.The IK target moved and IK Bone have not change. first frame: ![image.png](https://archive.blender.org/developer/F825412/image.png) next frame: ![image.png](https://archive.blender.org/developer/F825418/image.png) 3.Export FBX with NLA ![image.png](https://archive.blender.org/developer/F825428/image.png) ![image.png](https://archive.blender.org/developer/F825431/image.png) 4.Import Unity ![image.png](https://archive.blender.org/developer/F825443/image.png) ![image.png](https://archive.blender.org/developer/F825441/image.png) 5.Error blender file and fbx [error.7z](https://archive.blender.org/developer/F825447/error.7z)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @hazukiaoi

Added subscriber: @hazukiaoi

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2017-09-21 09:49:51 +02:00

The IK Bone influence is driver from another bone

This isn't supported by old dependency graph. You need to explicitly enable new dependency graph using --enable-new-depsgraph command line argument.

Thanks for the report, but it's a known limitation of old depsgraph.

> The IK Bone influence is driver from another bone This isn't supported by old dependency graph. You need to explicitly enable new dependency graph using `--enable-new-depsgraph` command line argument. Thanks for the report, but it's a known limitation of old depsgraph.
Author

I try todo this and the error still here
image.png

I try todo this and the error still here ![image.png](https://archive.blender.org/developer/F844963/image.png)

Are you showing a result of roundtrip of exporting scene from blender to fbx and back to blender?

Are you showing a result of roundtrip of exporting scene from blender to fbx and back to blender?

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Sergey Sharybin removed their assignment 2017-09-21 10:39:08 +02:00
Bastien Montagne was assigned by Sergey Sharybin 2017-09-21 10:39:08 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

@mont29, maybe you can deduct something here already?

@mont29, maybe you can deduct something here already?
Bastien Montagne changed title from When IK influence change, ik animation have 1 frame delay on export FBX to When driven IK influence change, ik animation have 1 frame delay 2017-09-21 10:56:10 +02:00
Bastien Montagne removed their assignment 2017-09-21 10:56:10 +02:00
Sergey Sharybin was assigned by Bastien Montagne 2017-09-21 11:02:31 +02:00

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

This has nothing to do with FBX at all, issue is with Blender update somehow. When you move frame forward between both NLA strips shown in pictures above, the right arm of the character does not follow the (now 1.0 influencing) IK target. Going to next frame, or switching to Edit mode and back, updates it correctly.

@Sergey re-assigning to you, since this is probably an update (depsgraph) issue (missing relation? wrong order, like IK constraint being evaluated before its driven influence is?), but maybe @JoshuaLeung has some idea here too? Note that usual tricks (extra object/data updates) do not seem to work here…

This has nothing to do with FBX at all, issue is with Blender update somehow. When you move frame forward between both NLA strips shown in pictures above, the right arm of the character does not follow the (now 1.0 influencing) IK target. Going to next frame, or switching to Edit mode and back, updates it correctly. @Sergey re-assigning to you, since this is *probably* an update (depsgraph) issue (missing relation? wrong order, like IK constraint being evaluated before its driven influence is?), but maybe @JoshuaLeung has some idea here too? Note that usual tricks (extra object/data updates) do not seem to work here…

@mont29. did you test that with new depsgraph enabled?

@mont29. did you test that with new depsgraph enabled?

@Sergey, yes, tested with both old and new depsgraph, with and without extra updates in both cases, none worked (old depsgraph has different behavior than new one when going backward, though, but neither is correct in that case either).

@Sergey, yes, tested with both old and new depsgraph, with and without extra updates in both cases, none worked (old depsgraph has different behavior than new one when going backward, though, but neither is correct in that case either).

This issue was referenced by 675cef0a16

This issue was referenced by 675cef0a165ad535546f24faf9d0ac474f704e64

Here is a simplified file ik_influence.blend

Here is a simplified file [ik_influence.blend](https://archive.blender.org/developer/F874980/ik_influence.blend)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thanks!Is OK!

Thanks!Is OK!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52835
No description provided.